add login field to connect to specific dres evaluation server, add scackbar to view errors if problems occur
